minor css fix in contact page for top spacing

--- a/src/app/contact/contact.page.scss
+++ b/src/app/contact/contact.page.scss
@@ -1,4 +1,5 @@
 .contact-users-data {
+    margin-top: 1rem;
     ion-card-title{
         text-align: center;
     }
